--- a/catalog.html
+++ b/catalog.html
@@ -14,11 +14,11 @@
     <header class="main-header">
       <div class="header-order-bar">
         <div  class="header-order-wrapper container">
-          <div class="logo-wrapper">
-            <a href="index.html">
+          <a href="index.html">
+            <div class="logo-wrapper">
               <img class="main-header-logo" src="img/logo-technomart.svg" width="108" height="18" alt="Логотип магазина Техномарт">
-            </a>
-          </div>
+            </div>
+          </a>
           <form>
             <div class="search-wrapper">
               <input class="search" type="search" placeholder="Поиск:">
@@ -67,7 +67,7 @@
         <ul class="main-navigation-list">
           <li class="main-navigation-item"><a href="index.html" >Главная</a></li>
           <li class="main-navigation-item"><a href="blank.html">Компания</a></li>
-          <li class="main-navigation-item"><a href="blank.html">Каталог</a></li>
+          <li class="main-navigation-item"><a>Каталог</a></li>
           <li class="main-navigation-item"><a href="blank.html">Новости</a></li>
           <li class="main-navigation-item"><a href="blank.html">Спецпредложения</a></li>
           <li class="main-navigation-item"><a href="blank.html">Доставка</a></li>
@@ -417,9 +417,11 @@
     <footer class="main-footer">
       <section class="footer-navigation container">
         <h2 class="visually-hidden">Ссылки на основные разделы сайта</h2>
-        <div class="main-footer-logo-wrapper">
-          <img class="main-footer-logo" src="img/logo-technomart.svg" width="138" height="23" alt="Логотип магазина Техномарт">
-        </div>
+        <a href="index.html">
+          <div class="main-footer-logo-wrapper">
+            <img class="main-footer-logo" src="img/logo-technomart.svg" width="138" height="23" alt="Логотип магазина Техномарт">
+          </div>
+        </a>
         <div class="site-sections-list-wrapper">
           <ul class="site-sections-list">
             <li>
