Декоративные элементы, исправил ошибки № 2

--- a/catalog.html
+++ b/catalog.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page-body">
-    <header class="main-header">
+    <header class="main-header catalog-main-header">
       <div class="header-order-bar">
         <div  class="header-order-wrapper container">
           <a href="index.html">
@@ -104,10 +104,10 @@
                           width: 84%; "></div>
                     </div>
                     <div class="toggle toggle-min" tabindex="0"
-                      style="left: 0%;">
+                      style="left: 8.5%;">
                     </div>
                     <div class="toggle toggle-max" tabindex="0"
-                    style="right: 21.6%;">
+                    style="right: 18%;">
                     </div>
                 </div>
                 <div class="price-controls">
@@ -223,21 +223,21 @@
           <div class="sorting-and-perforators-list-wrapper">
             <section class="sorting">
               <h2>Сортировка:</h2>
-              <ul class="sorting-list-one">
+              <ul class="sorting-list--price-type-functional">
                 <li><button class="current" type="button" >ПО ЦЕНЕ</button></li>
                 <li><button type="button" >ПО ТИПУ</button></li>
                 <li><button type="button" >ПО ФУНКЦИОНАЛУ</button></li>
               </ul>  
-              <ul class="sorting-list-two">
+              <ul class="sorting-list-priority">
                 <li>
-                  <button class="sorting-list-two-button min-to-max current" type="button" >
+                  <button class="sorting-list-priority-button min-to-max current" type="button" >
                     <svg width="12" height="10" viewBox="0 0 12 10" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M5.66241 10L0.162415 0H11.1624" fill="#C5C5C5"/>
                     </svg>
                   </button>
                 </li>
                 <li>
-                  <button class="sorting-list-two-button max-to-min" type="button" >
+                  <button class="sorting-list-priority-button max-to-min" type="button" >
                     <svg width="12" height="10" viewBox="0 0 12 10" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M5.66241 10L0.162415 0H11.1624" fill="#C5C5C5"/>
                     </svg>
