--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
           </form>
           <section class="order-section">
             <ul class="order-section-list">
-              <li class="order-section-item"><a href="blank.html" class="bookmarks">Закладки:0</a></li>
-              <li class="order-section-item"><a href="blank.html" class="basket">Корзина:0</a></li>
+              <li class="order-section-item"><a href="blank.html" class="bookmarks">Закладки: 0</a></li>
+              <li class="order-section-item"><a href="blank.html" class="basket">Корзина: 0</a></li>
               <li class="order-section-item"><a href="blank.html" class="сheckout">Оформить заказ</a></li>
             </ul>
           </section>
@@ -38,11 +38,11 @@
         <p class="header-shop-description">Интернет-магазин строительных материалов<br>и инструментов для ремонта</p>
         <div class="header-phone-and-shop-addres-wrapper">
           <a class="header-phone" href="tel:+78005558628">+7 800 555-86-28</a>
-          <p class="header-shop-address">г.Санкт-Петербург, наб.Реки Карповки, 5 лит П</p>
+          <p class="header-shop-address">г. Санкт-Петербург, наб.Реки Карповки, 5 лит П</p>
         </div> 
         <section class="unreg-user-section">
           <ul class="unreg-user-section-list">
-            <li class="unreg-user-section-item">
+            <li class="unreg-user-section-item unreg-user-section-item-login">
               <a class="login" href="blank.html">
                 <svg width="21" height="17" viewBox="0 0 21 17" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M14.875 8.5L6 0V6H0V11H6V17L14.875 8.5Z" fill="#C5C5C5"/>
@@ -128,7 +128,7 @@
                 <div class="popular-products-item--img-container">
                   <img src="img/catalog/bosch-bfg-9000.jpg" width="184" height="164" alt="Большой перфоратор с питанием от сети">
                 </div>
-                <p class="popular-products-text">Перфоратор BOSCH BFG&amp;9000</p>
+                <p class="popular-products-text">Перфоратор BOSCH BFG&nbsp;9000</p>
                 <div class="product-item-price-container">
                   <del class="pass-through-text">32500 Р.</del>
                   <ins class="new-price">25500 Р.</ins>
@@ -144,7 +144,7 @@
                 <div class="popular-products-item--img-container">
                   <img src="img/catalog/bosch-bfg-3000.jpg" width="127" height="112" alt="Маленький перфоратор с питанием от аккумулятора">
                 </div>
-                <p class="popular-products-text">Перфоратор BOSCH BFG&amp;3000</p>
+                <p class="popular-products-text">Перфоратор BOSCH BFG&nbsp;3000</p>
                 <div class="product-item-price-container">
                   <del class="pass-through-text">22500 Р.</del>
                   <ins class="new-price">15500 Р.</ins>
@@ -160,7 +160,7 @@
                 <div class="popular-products-item--img-container">
                   <img src="img/catalog/bosch-bfg-6000.jpg" width="144" height="128" alt="Перфоратор среднего размера с питанием от аккумулятора">
                 </div>
-                <p class="popular-products-text">Перфоратор BOSCH BFG&amp;6000</p>
+                <p class="popular-products-text">Перфоратор BOSCH BFG&nbsp;6000</p>
                 <div class="product-item-price-container">
                   <del class="pass-through-text">30500 Р.</del>
                   <ins class="new-price">25500 Р.</ins>
@@ -176,7 +176,7 @@
                 <div class="popular-products-item--img-container">
                   <img src="img/catalog/bosch-bfg-2000.jpg" width="127" height="112" alt="Маленький перфоратор с питанием от аккумулятора">
                 </div>
-                <p class="popular-products-text">Перфоратор BOSCH BFG&amp;2000</p>
+                <p class="popular-products-text">Перфоратор BOSCH BFG&nbsp;2000</p>
                 <div class="product-item-price-container">
                   <del class="pass-through-text">22500 Р.</del>
                   <ins class="new-price">12500 Р.</ins>
@@ -304,7 +304,7 @@
             ремонта и строительства не оставит равнодушными любителей сэкономить на 
             гастарбайтерах. 
           </p>
-          <p class="about-us-info about-us-info-delivery">Мы можем доставить ваш товар в самые отдаленные точки России!
+          <p class="about-us-info about-us-info-delivery">Мы можем доставить ваш товар в самые отдаленные точки России! <br> 
             Техномарт работает со многими транспортными компаниями:
           </p>
           <ul class="about-us-list">
@@ -341,7 +341,7 @@
         <div class="site-sections-list-wrapper">
           <ul class="site-sections-list">
             <li>
-              <a href="blank.html">Компания</a>
+               <a href="blank.html">Компания</a>
             </li>
             <li>
               <a href="blank.html">Новости</a>
@@ -375,7 +375,7 @@
         </div>
         <section class="footer-contacts">
           <h2 class="visually-hidden">Наши контакты</h2>
-          <p class="footer-contacts-description">г.Санкт-Петербург, наб.Реки Карповки, 5 лит П</p> 
+          <p class="footer-contacts-description">г. Санкт-Петербург, наб. Реки Карповки, 5 лит П</p> 
           <a  class="footer-contacts-phone" href="tel:+78005558628">+7 800 555-86-28</a>
         </section>
       </section>
@@ -406,7 +406,7 @@
             </ul>
           </section>  
           <section class="feedback">
-            <p>Обратная связь: <a href=" mailto:mail@htmlacademy.ru ">mail@htmlacademy.ru</a></p>
+            <p class="feedback-info ">Обратная связь: <a href=" mailto:mail@htmlacademy.ru ">mail@htmlacademy.ru</a></p>
             <p>Разработано — <a href="https://htmlacademy.ru/intensive/htmlcss" target="blank">htmlacademy.ru</a></p>
           </section>
         </div>
