--- a/index.html
+++ b/index.html
@@ -106,8 +106,16 @@
                   <a href="blank.html" class="tipical-red-button">Открыть каталог</a>
                 </li>
               </ul>
-              <button class="promo-slider-button-back" type="button" aria-label="назад"></button>
-              <button class="promo-slider-button-next" type="button" aria-label="вперед"></button>
+              <button class="promo-slider-button-back" type="button" aria-label="назад">
+                <svg width="23" height="41" viewBox="0 0 23 41" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M20.83 0.965027L22.919 3.06403L5.13 20.947L22.977 38.886L20.887 40.985L0.951996 20.947L20.83 0.965027Z" fill="white"/>
+                </svg>
+              </button>
+              <button class="promo-slider-button-next" type="button" aria-label="вперед">
+                <svg width="23" height="41" viewBox="0 0 23 41" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M20.83 0.965027L22.919 3.06403L5.13 20.947L22.977 38.886L20.887 40.985L0.951996 20.947L20.83 0.965027Z" fill="white"/>
+                </svg>
+              </button>
               <div class="promo-slider--slide-activity-button">
                 <button class="activity-button active" type="button"></button>
                 <button class="activity-button" type="button"></button>
@@ -425,7 +433,11 @@
       <div class="popup-feedback-bottom-bar">
         <button class="tipical-red-button tipical-red-button-popup" type="submit">Отправить</button>
       </div>
-      <button class="popup-close" type="button"></button>
+      <button class="popup-close" type="button">
+        <svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M13.273 10.5L20.695 3.07799C21.084 2.68899 21.084 2.05299 20.695 1.66399L19.336 0.304995C18.947 -0.0840054 18.311 -0.0840054 17.922 0.304995L10.5 7.72699L3.07799 0.304995C2.68899 -0.0840054 2.05299 -0.0840054 1.66399 0.304995L0.304995 1.66399C-0.0840054 2.05299 -0.0840054 2.68899 0.304995 3.07799L7.72699 10.5L0.305995 17.922C-0.0830054 18.311 -0.0830054 18.947 0.305995 19.336L1.66499 20.695C2.05399 21.084 2.68999 21.084 3.07899 20.695L10.501 13.273L17.923 20.695C18.312 21.084 18.948 21.084 19.337 20.695L20.696 19.336C21.085 18.947 21.085 18.311 20.696 17.922L13.273 10.5Z" fill="#EE3643"/>
+        </svg>
+      </button>
     </form>
   </body>
 </html>
