--- a/blank.html
+++ b/blank.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="img/favicon/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="img/favicon/favicon180.png">
     <link rel="manifest" href="manifest.webmanifest">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header>
@@ -44,7 +45,7 @@
       <a href="tel:+78005558628">+7 800 555-86-28</a>
       <p>г. Санкт-Петербург, наб. Реки Карповки, 5 лит П</p> 
     </header> 
-    <p>Страница заглушка.</p>
+       <p>Страница заглушка.</p>
     <footer>
       <section>
         <h2>Ссылки на основные разделы сайта</h2>
