--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="header-shop-description-phone-addres-and-user-section-wrapper container">
         <p class="header-shop-description">Интернет&#8209;магазин строительных материалов и&nbsp;инструментов для ремонта</p>
         <div class="header-phone-and-shop-addres-wrapper">
-          <a class="header-phone" href="tel:+78005558628"><nobr>+7 800 555-86-28</nobr></a>
+          <a class="header-phone" href="tel:+78005558628">+7 800 555-86-28</a>
           <p class="header-shop-address">г.&nbsp;Санкт&#8209;Петербург, наб.&nbsp;Реки Карповки, 5&nbsp;лит&nbsp;П</p>
         </div> 
         <section class="unreg-user-section">
@@ -245,7 +245,7 @@
           <div class="services-info-wripper">
             <h2>Сервисы</h2>
             <p class="services-info">
-              Хороший интернет-магазин отличается от плохого не только ценами!
+              Хороший интернет-магазин отличается от&nbsp;плохого не&nbsp;только ценами!
               Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
             </p>
           </div>
@@ -267,19 +267,19 @@
               <li class="services-description-item services-description-item-delivery current">
                 <h3>Доставка</h3>
                 <p class="delivery">
-                  Мы с удовольствием доставим ваш товар прямо
-                  к вашему подъезду совершенно бесплатно!<br>
+                  Мы с&nbsp;удовольствием доставим ваш товар прямо
+                  к&nbsp;вашему подъезду совершенно бесплатно!<br>
                   Ведь мы неплохо заработаем,<br>
-                  поднимая его на ваш этаж!
+                  поднимая его на&nbsp;ваш этаж!
                 </p>
               </li>
               <li class="services-description-item services-description-item-guaranty">
                 <h3>Гарантия</h3>
                 <p class="guaranty">
-                  Если купленный у нас товар поломается или заискрит,
-                  а также в случае пожара, спровоцированного его возгоранием,
-                  вы всегда можете быть уверены в нашей гарантии.
-                  Мы обменяем сгоревший товар на новый.
+                  Если купленный у&nbsp;нас товар поломается или заискрит,
+                  а&nbsp;также в&nbsp;случае пожара, спровоцированного его возгоранием,
+                  вы всегда можете быть уверены в&nbsp;нашей гарантии.
+                  Мы обменяем сгоревший товар на&nbsp;новый.
                   Дом уж восстановите как-нибудь сами.
                 </p>
               </li>
@@ -287,8 +287,8 @@
               <li class="services-description-item services-description-item-credit">
                 <h3>Кредит</h3>
                 <p class="credit">
-                  Залезть в долговую яму стало проще!<br>
-                  Кредитные консультанты придут вам на помощь.
+                  Залезть в&nbsp;долговую яму стало проще!<br>
+                  Кредитные консультанты придут вам на&nbsp;помощь.
                 </p>
                 <button class="tipical-red-button">ОТПРАВИТЬ ЗАЯВКУ</button>
               </li>
@@ -301,11 +301,11 @@
           <h2 class="visually-hidden">О нас</h2>
           <p class="about-us-company-name">Компания «Техномарт»</p>
           <p class="about-us-info about-us-info-shopping">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для
-            ремонта и строительства не оставит равнодушными любителей сэкономить на 
+            ремонта и&nbsp;строительства не&nbsp;оставит равнодушными любителей сэкономить на&nbsp;
             гастарбайтерах. 
           </p>
-          <p class="about-us-info about-us-info-delivery">Мы можем доставить ваш товар в самые отдаленные точки России! <br> 
-            Техномарт работает со многими транспортными компаниями:
+          <p class="about-us-info about-us-info-delivery">Мы можем доставить ваш товар в&nbsp;самые отдаленные точки России! <br> 
+            Техномарт работает со&nbsp;многими транспортными компаниями:
           </p>
           <ul class="about-us-list">
             <li>
@@ -318,17 +318,21 @@
               ЖелДорЭкспедиция
             </li>
           </ul>
-          <a class="tipical-red-button" href="blank.html">Подробнее о компании</a>
+          <a class="tipical-red-button" href="blank.html">Подробнее о&nbsp;компании</a>
         </section>
         <section class="contacts">
-          <h2 class="visually-hidden">Мы на карте города</h2>
+          <h2 class="visually-hidden">Мы на&nbsp;карте города</h2>
           <p class="contacts-header">Контакты</p>
-          <p class="contacts-info">Вы можете забрать товар сами, заехав в наш офис:</p>
-          <!-- Здесь будет карта -->
+          <p class="contacts-info">Вы можете забрать товар сами, заехав в&nbsp;наш офис:</p>
+          <!-- Карта -->
           <a href="blank.html">
-            <img class="map-img" src="img/map.png" width="300" height="158" alt="схематическая карта проезда">
+            <img class="map-img" src="img/map.png" width="300" height="158" alt="Офис компании по адресу набережная реки Карповки, 5, литера П, Санкт-Петербург">
           </a>
           <a class="tipical-red-button" href="">Заблудились? Напишите нам!</a>
+          <div class="modal-map-container">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7987.272102094383!2d30.317381!3d59.968342!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe703c377f3424272!2sStudio%20212!5e0!3m2!1sru!2sua!4v1631471626326!5m2!1sru!2sua"
+             width="943" height="443" style="border:0;" allowfullscreen="" loading="lazy" title="Офис компании по адресу набережная реки Карповки, 5, литера П, Санкт-Петербург"></iframe>
+          </div>
         </section>
         <!-- Форма обратной  связи -->
         <form class="popup-feedback" action="https://echo.htmlacademy.ru" method="post">
@@ -392,7 +396,7 @@
         </div>
         <section class="footer-contacts">
           <h2 class="visually-hidden">Наши контакты</h2>
-          <p class="footer-contacts-description">г. Санкт-Петербург, наб. Реки Карповки, 5 лит П</p> 
+          <p class="footer-contacts-description">г.&nbsp;Санкт&#8209;Петербург, наб.&nbsp;Реки Карповки, 5&nbsp;лит&nbsp;П</p> 
           <a  class="footer-contacts-phone" href="tel:+78005558628">+7 800 555-86-28</a>
         </section>
       </section>
@@ -400,7 +404,7 @@
         <div class="bottom-footer-wrapper container">
           <section class="copyright">
             <h2 class="visually-hidden">Копирайт</h2>
-            <p>© 2010–2021 Компания «Техномарт» Все права защищены</p>  
+            <p>© 2010–2021 Компания&nbsp;«Техномарт» Все права защищены</p>  
           </section>
           <section class="socials">
             <h2 class="visually-hidden">Социальные сети</h2>
