--- a/index.html
+++ b/index.html
@@ -330,6 +330,11 @@
           </a>
           <a class="tipical-red-button" href="">Заблудились? Напишите нам!</a>
           <div class="modal-map-container">
+            <button class="popup-close" type="button">
+              <svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M13.273 10.5L20.695 3.07799C21.084 2.68899 21.084 2.05299 20.695 1.66399L19.336 0.304995C18.947 -0.0840054 18.311 -0.0840054 17.922 0.304995L10.5 7.72699L3.07799 0.304995C2.68899 -0.0840054 2.05299 -0.0840054 1.66399 0.304995L0.304995 1.66399C-0.0840054 2.05299 -0.0840054 2.68899 0.304995 3.07799L7.72699 10.5L0.305995 17.922C-0.0830054 18.311 -0.0830054 18.947 0.305995 19.336L1.66499 20.695C2.05399 21.084 2.68999 21.084 3.07899 20.695L10.501 13.273L17.923 20.695C18.312 21.084 18.948 21.084 19.337 20.695L20.696 19.336C21.085 18.947 21.085 18.311 20.696 17.922L13.273 10.5Z" fill="#EE3643"/>
+              </svg>
+            </button>
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7987.272102094383!2d30.317381!3d59.968342!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe703c377f3424272!2sStudio%20212!5e0!3m2!1sru!2sua!4v1631471626326!5m2!1sru!2sua"
              width="943" height="443" style="border:0;" allowfullscreen="" loading="lazy" title="Офис компании по адресу набережная реки Карповки, 5, литера П, Санкт-Петербург"></iframe>
           </div>
