--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
     <link rel="apple-touch-icon" href="img/favicon/favicon180.png">
     <link rel="manifest" href="manifest.webmanifest">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body class="page-body">
     <header class="main-header catalog-main-header">
@@ -37,10 +37,10 @@
         </div>
       </div>
       <div class="header-shop-description-phone-addres-and-user-section-wrapper container">
-        <p class="header-shop-description">Интернет-магазин строительных материалов<br>и инструментов для ремонта</p>
+        <p class="header-shop-description">Интернет&#8209;магазин строительных материалов и&nbsp;инструментов для ремонта</p>
         <div class="header-phone-and-shop-addres-wrapper">
           <a class="header-phone" href="tel:+78005558628">+7 800 555-86-28</a>
-          <p class="header-shop-address">г. Санкт-Петербург, наб. Реки Карповки, 5 лит П</p>
+          <p class="header-shop-address">г.&nbsp;Санкт&#8209;Петербург, наб.&nbsp;Реки Карповки, 5&nbsp;лит&nbsp;П</p>
         </div> 
         <section class="reg-user-section">
           <div class="reg-user-section-wrapper">
@@ -110,7 +110,9 @@
                           margin-left:0%;
                           width: 84%; "></div>
                     </div>
-                    <!-- нужен ли нижестоящим дивам Ариа-лейбл? -->
+                    <!-- нужен ли нижестоящим дивам Ариа-лейбл? Они вроде как 
+                    интерактивными элементами сверстаны, но описания к ним нет.
+                    -->
                     <div class="toggle toggle-min" tabindex="0"
                       style="left: 8.5%;">
                     </div>
@@ -262,8 +264,8 @@
                   </div>
                   <p class="perforators-item-text">Перфоратор BOSCH BFG&nbsp;6000</p>
                   <div class="product-item-price-container">
-                    <del class="pass-through-text">30500 Р.</del>
-                    <ins class="new-price">25500 Р.</ins>
+                    <s class="pass-through-text">30500 Р.</s>
+                    <p class="new-price">25500 Р.</p>
                   </div>
                   <div class="perforators-list-button-container">
                     <button class="perforators-list-button buy" type="button">Купить</button>
@@ -276,8 +278,8 @@
                   </div>
                   <p class="perforators-item-text">Перфоратор BOSCH BFG&nbsp;6000</p>
                   <div class="product-item-price-container">
-                    <del class="pass-through-text">30500 Р.</del>
-                    <ins class="new-price">25500 Р.</ins>
+                    <s class="pass-through-text">30500 Р.</s>
+                    <p class="new-price">25500 Р.</p>
                   </div>
                   <div class="perforators-list-button-container">
                     <button class="perforators-list-button buy" type="button">Купить</button>
@@ -290,8 +292,8 @@
                   </div>
                   <p class="perforators-item-text">Перфоратор BOSCH BFG&nbsp;6000</p>
                   <div class="product-item-price-container">
-                    <del class="pass-through-text">30500 Р.</del>
-                    <ins class="new-price">25500 Р.</ins>
+                    <s class="pass-through-text">30500 Р.</s>
+                    <p class="new-price">25500 Р.</p>
                   </div>
                   <div class="perforators-list-button-container">
                     <button class="perforators-list-button buy" type="button">Купить</button>
@@ -304,8 +306,8 @@
                   </div>
                   <p class="perforators-item-text">Перфоратор BOSCH BFG&nbsp;3000</p>
                   <div class="product-item-price-container">
-                    <del class="pass-through-text">22500 Р.</del>
-                    <ins class="new-price">15500 Р.</ins>
+                    <s class="pass-through-text">22500 Р.</s>
+                    <p class="new-price">15500 Р.</p>
                   </div> 
                   <div class="perforators-list-button-container">
                     <button class="perforators-list-button buy" type="button">Купить</button>
@@ -318,8 +320,8 @@
                   </div>
                   <p class="perforators-item-text">Перфоратор BOSCH BFG&nbsp;6000</p>
                   <div class="product-item-price-container">
-                    <del class="pass-through-text">30500 Р.</del>
-                    <ins class="new-price">25500 Р.</ins>
+                    <s class="pass-through-text">30500 Р.</s>
+                    <p class="new-price">25500 Р.</p>
                   </div>
                   <div class="perforators-list-button-container">
                     <button class="perforators-list-button buy" type="button">Купить</button>
@@ -345,8 +347,8 @@
                   </div>
                   <p class="perforators-item-text">Перфоратор BOSCH BFG&nbsp;3000</p>
                   <div class="product-item-price-container">
-                    <del class="pass-through-text">22500 Р.</del>
-                    <ins class="new-price">15500 Р.</ins>
+                    <s class="pass-through-text">22500 Р.</s>
+                    <p class="new-price">15500 Р.</p>
                   </div> 
                   <div class="perforators-list-button-container">
                     <button class="perforators-list-button buy" type="button">Купить</button>
@@ -359,8 +361,8 @@
                   </div>
                   <p class="perforators-item-text">Перфоратор BOSCH BFG&nbsp;6000</p>
                   <div class="product-item-price-container">
-                    <del class="pass-through-text">30500 Р.</del>
-                    <ins class="new-price">25500 Р.</ins>
+                    <s class="pass-through-text">30500 Р.</s>
+                    <p class="new-price">25500 Р.</p>
                   </div>
                   <div class="perforators-list-button-container">
                     <button class="perforators-list-button buy" type="button">Купить</button>
@@ -410,8 +412,8 @@
           <section class="about-perforators container">
             <h2>ПАРА СЛОВ О ПЕРФОРАТОРАХ</h2>
             <p>Перфоратор &ndash; универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.
-              Существуют&nbsp;электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. 
-              В&nbsp;ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.
+              Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. 
+              В ассортиментном ряду есть выбор «&nbsp;трехрежимников&nbsp;»&nbsp;: в одном устройстве будут совмещены отбойный молоток и ударная дрель.
             </p>
           </section>
         </div>
@@ -462,7 +464,7 @@
         </div>
         <section class="footer-contacts">
           <h2 class="visually-hidden">Наши контакты</h2>
-          <p class="footer-contacts-description">г. Санкт-Петербург, наб. Реки Карповки, 5 лит П</p> 
+          <p class="footer-contacts-description">г.&nbsp;Санкт&#8209;Петербург, наб.&nbsp;Реки Карповки, 5&nbsp;лит&nbsp;П</p> 
           <a  class="footer-contacts-phone" href="tel:+78005558628">+7 800 555-86-28</a>
         </section>
       </section>
@@ -470,7 +472,7 @@
         <div class="bottom-footer-wrapper container">
           <section class="copyright">
             <h2 class="visually-hidden">Копирайт</h2>
-            <p>© 2010–2021 Компания «Техномарт» Все права защищены</p>  
+            <p>© 2010&nbsp;–&nbsp;2021 Компания&nbsp;«Техномарт» Все права защищены</p>  
           </section>
           <section class="socials">
             <h2 class="visually-hidden">Социальные сети</h2>
